generated/checker-for-evaluation/generated/test-Misuse-a97de7bff13b1cc825c1b1344eaed8d6c2d3e695/build_logs/2/build_error_log3.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘const clang::IfStmt* {anonymous}::findEnclosingIfStmt(const clang::Expr*, clang::ento::CheckerContext&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:28:30: error: ‘class clang::ento::CheckerContext’ has no member named ‘getASTManager’; did you mean ‘getStoreManager’?
   28 |   const ASTContext &ACtx = C.getASTManager().getASTContext();
      |                              ^~~~~~~~~~~~~
      |                              getStoreManager
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:32:35: error: passing ‘const clang::ASTContext’ as ‘this’ argument discards qualifiers [-fpermissive]
   32 |     auto Parents = ACtx.getParents(*Current);
      |                    ~~~~~~~~~~~~~~~^~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Checkers/utility.h:11,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:18:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/ParentMapContext.h:131:25: note:   in call to ‘clang::DynTypedNodeList clang::ASTContext::getParents(const NodeT&) [with NodeT = clang::Stmt]’
  131 | inline DynTypedNodeList ASTContext::getParents(const NodeT &Node) {
      |                         ^~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
